--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          node-version: '3.13'
+          python-version: '3.13'
 
       - name: Install Dependencies
         run: |
